--- a/webapp/games/hua-rong-dao.html
+++ b/webapp/games/hua-rong-dao.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="icon" href="img/favicon.ico">
@@ -55,7 +55,9 @@
   </nav>
 
   <div class="container">
-
+  	<div>
+  		<p>Hint: 尝试将2*2的方块移动到最下排中央 </p>
+  	</div>
     <div class="main-canvas">
       <canvas id="game-canvas" width="600" height="600">
           您的浏览器不支持canvas！
@@ -66,11 +68,12 @@
   <!-- /container -->
 
 
-  <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+  <script src="../js/libs/jquery-1.11.2.min.js"></script>
   <script
     src="http://cdn.bootcss.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-  <script src="../js/libs/jquery-1.11.2.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.4.0/fabric.min.js"></script>
+  <script src="https://code.createjs.com/easeljs-0.8.0.min.js"></script>
+  <script
+    src="http://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.4.0/fabric.min.js"></script>
   <script src="../js/libs/handlebars-v1.3.0.js"></script>
   <script src="../js/libs/ember.js"></script>
   <script src="../js/libs/ember-data.js"></script>
