--- a/webapp/games/hua-rong-dao.html
+++ b/webapp/games/hua-rong-dao.html
@@ -7,7 +7,7 @@
 <meta name="author" content="">
 <link rel="icon" href="img/favicon.ico">
 
-<title>[Developing]Games on HTML5 - 华容道</title>
+<title>Games on HTML5 - 华容道</title>
 <link
   href="http://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap.min.css"
   rel="stylesheet">
@@ -32,22 +32,9 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li class="dropdown"><a href="#" class="dropdown-toggle"
-            data-toggle="dropdown" role="button" aria-expanded="false">##
-              <span class="caret"></span>
-          </a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">#</a></li>
-              <li><a href="#">#</a></li>
-              <li><a href="#">#</a></li>
-              <li class="divider"></li>
-              <li class="dropdown-header">#</li>
-              <li><a href="#">#</a></li>
-              <li><a href="#">#</a></li>
-            </ul></li>
+          <li class="active"><a href="#">点右上角，分享给朋友</a></li>
+          <li><a href="https://github.com/Liu-Ameng/Idea01/issues">留言</a></li>
+          <li><a href="https://github.com/Liu-Ameng/Idea01">Source code</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
